--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Ciara</title>
+    <title>PreK</title>
   </head>
   <body>
     <nav>
@@ -23,9 +23,8 @@
         </div>
       </div>
       <ul class="nav__links" id="nav-links">
-        <li><a href="#">About Me</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
         <li><a href="#" class="hire__me">Hire Me</a></li>
       </ul>
     </nav>
@@ -35,16 +34,17 @@
         <img src="assets/header.png" alt="header" />
       </div>
       <div class="header__content">
-        <h5>Welcome To My World</h5>
-        <h1>Hi, I am <span>Ciara Joe a</span> UI/UX Designer</h1>
+        <h5>Welcome To</h5>
+        <h1><span>PreK</span></h1>
         <p>
-          Designing for four years in a young, rapid growing startups taught me
-          how to balance business goals and engineering constraints as I
-          unrelentingly advocated for.
+          Kindergarten Education is the first stage of compulsory and
+          mandatory formal education which consists of one (1) year
+          of preparatory education for children at least five (5) years
+          old as a prerequisite for Grade 1.
         </p>
         <div class="links">
           <div class="socials">
-            <h4>FIND ME</h4>
+            <h4>FIND US</h4>
             <ul>
               <li>
                 <a href="#"><i class="ri-facebook-line"></i></a>
