--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="nav__links" id="nav-links">
         <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="#" class="hire__me">Hire Me</a></li>
+        <li><a href="#" class="hire__me">Contact Us</a></li>
       </ul>
     </nav>
 
