--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <h5>Welcome To</h5>
         <h1><span>PreK</span></h1>
         <p>
-          Kindergarten Education is the first stage of compulsory and
-          mandatory formal education which consists of one (1) year
-          of preparatory education for children at least five (5) years
-          old as a prerequisite for Grade 1.
+          Join us for a fun-filled and educational experience at our
+          PreK open days. Meet our dedicated teachers,
+          explore our state-of-the-art facilities, and get a glimpse of
+          the exciting curriculum we offer.
         </p>
         <div class="links">
           <div class="socials">
