--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           PreK open days. Meet our dedicated teachers,
           explore our state-of-the-art facilities, and get a glimpse of
           the exciting curriculum we offer.
+          
+          contact : help@prek.co.uk
         </p>
         <div class="links">
           <div class="socials">
