--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav__header">
         <div class="nav__logo">
           <a href="#">
-            <img src="assets/logo.jpg" alt="logo" />
+            <img src="assets/logo.png" alt="logo" />
           </a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
