--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="header__content">
         <h5>Welcome To</h5>
-        <h1><span>PreK</span></h1>
+        <h1><span>PreKindergarten</span></h1>
         <p>
           Join us for a fun-filled and educational experience at our
           PreK open days. Meet our dedicated teachers,
