--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           PreK open days. Meet our dedicated teachers,
           explore our state-of-the-art facilities, and get a glimpse of
           the exciting curriculum we offer.
-        <p>
-            contact : help@prek.co.uk
+
+Contact Us: help@prek.co.uk
         </p>
         <div class="links">
           <div class="socials">
